syntax = "proto3";

package cartpb;

option go_package = "github.com/vincentandr/shopping-microservice/src/cart/cartpb";

service CartService {
    rpc Grpc_GetCartItems(GetCartItemsRequest) returns (ItemsResponse) {}
    rpc Grpc_AddOrUpdateCart(AddOrUpdateCartRequest) returns (ItemsResponse) {}
    rpc Grpc_RemoveItemFromCart(RemoveItemFromCartRequest) returns (ItemsResponse) {}
    rpc Grpc_RemoveAllCartItems(RemoveAllCartItemsRequest) returns (ItemsResponse) {}
    rpc Grpc_Checkout(CheckoutRequest) returns (CheckoutResponse) {}
}

message CheckoutRequest {
    string user_id = 1;
}

message CheckoutResponse{
    string order_id = 1;
}

message GetCartItemsRequest {
    string user_id = 1;
}

message ItemResponse{
    string product_id = 1;
    string name = 2;
    float price = 3;
    int32 qty = 4;
}

message ItemsResponse {
    repeated ItemResponse products = 1;
}

message AddOrUpdateCartRequest {
    string user_id = 1;
    string product_id = 2;
    int32 new_qty = 3;
}

message RemoveItemFromCartRequest {
    string user_id = 1;
    string product_id = 2;
}

message RemoveAllCartItemsRequest {
    string user_id = 1;
}