syntax = "proto3";

package cartpb;

option go_package = "github.com/vincentandr/shopping-microservice/src/cart/cartpb";

service CartService {
    rpc GetCartItems(GetCartItemsRequest) returns (GetCartItemsResponse) {}
    rpc AddOrUpdateCart(AddOrUpdateCartRequest) returns (AddOrUpdateCartResponse) {}
    rpc RemoveItemFromCart(RemoveItemFromCartRequest) returns (RemoveItemFromCartResponse) {}
}

message GetCartItemsRequest {
    string user_id = 1;
}

message GetCartItemResponse{
    int32 product_id = 1;
    string name = 2;
    int32 qty = 3;
}

message GetCartItemsResponse {
    repeated GetCartItemResponse products = 1;
}

message AddOrUpdateCartRequest {
    string user_id = 1;
    int32 product_id = 2;
    int32 new_qty = 3;
}

message AddOrUpdateCartResponse {
    repeated GetCartItemResponse products = 1;
}

message RemoveItemFromCartRequest {
    string user_id = 1;
    int32 product_id = 2;
}

message RemoveItemFromCartResponse {
    repeated GetCartItemResponse products = 1;
}